Transformed UI State into singleton to avoid passing 1000's of parameters in UI methods